# ai-ehr

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
src/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/app/: main.py
src/backend/app/api/middleware/: audit.py  tenant.py
src/backend/app/api/routes/: allergies.py  appointments.py  audit_logs.py  auth.py  clinical_notes.py  conditions.py  consents.py  encounters.py  fhir.py  immunizations.py  observations.py  orders.py  patients.py  (+1 more)
src/backend/app/core/: audit.py  break_glass.py  config.py  database.py  security.py
src/backend/app/models/: __init__.py  allergy_intolerance.py  appointment.py  audit_log.py  clinical_note.py  condition.py  consent.py  encounter.py  immunization.py  medication.py  observation.py  order.py  patient.py  role.py  user.py
src/backend/app/schemas/: __init__.py  allergy_intolerance.py  appointment.py  audit_log.py  clinical_note.py  condition.py  consent.py  encounter.py  fhir.py  immunization.py  medication.py  observation.py  order.py  patient.py  role.py  user.py
src/backend/app/services/: auth_service.py  fhir_service.py  patient_service.py
src/backend/app/utils/: encryption.py  validators.py
src/backend/tests/: conftest.py
src/backend/tests/e2e/: test_clinical_workflow.py
src/backend/tests/integration/: test_audit.py  test_auth_api.py  test_encounter_api.py  test_fhir_api.py  test_patient_api.py
src/backend/tests/unit/: test_auth_service.py  test_encryption.py  test_fhir_service.py  test_patient_service.py  test_validators.py
(+103 files in other folders)
