[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmedrecord-backend"
version = "0.1.0"
description = "OpenMedRecord EHR Backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
# Async test configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output configuration
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]

# Warnings
filterwarnings = [
    "error",
    # Ignore DeprecationWarning for event_loop fixture (handled by asyncio_mode=auto)
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
    # Ignore pytest-asyncio deprecation warnings
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning",
    # passlib and its deps (argon2-cffi, crypt) emit deprecation warnings on Python 3.12+
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:argon2",
    "ignore:'crypt' is deprecated:DeprecationWarning",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
